# QPAT-QuestionPaperAnalysingTool

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/md/: optimized_questions.md  predicted_questions.md
src/: json_to_markdown.py  markdown_to_pdf.py  most_likely_questions.py  pdf_to_json.py
